agora foi podem trabalhar

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -36,7 +36,7 @@
         android:id="@+id/edt_email"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/telacadastro"
+        android:background="@color/white"
         android:ems="10"
         android:hint="  Email"
         android:inputType="textEmailAddress"
@@ -50,8 +50,8 @@
 
     <Button
         android:id="@+id/bnt__cadastro"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="125dp"
+        android:layout_height="56dp"
         android:background="@drawable/ic_launcher_background"
         android:text="Entrar"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -101,7 +101,7 @@
         android:id="@+id/edt_senha"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/telacadastro"
+        android:background="@color/white"
         android:ems="10"
         android:hint="  Senha "
         android:inputType="textPassword"
@@ -117,7 +117,7 @@
         android:id="@+id/edt_nome"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/telacadastro"
+        android:background="@color/white"
         android:ems="10"
         android:hint="  Nome"
         android:inputType="text"
