--- a/app/src/main/res/layout/activity_cadastro_freelancer.xml
+++ b/app/src/main/res/layout/activity_cadastro_freelancer.xml
@@ -38,7 +38,7 @@
         android:id="@+id/edt_email"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/telacadastro"
+        android:background="@color/white"
         android:ems="10"
         android:hint="  Email"
         android:inputType="textEmailAddress"
@@ -64,13 +64,13 @@
 
     <Button
         android:id="@+id/bnt__cadastro"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="136dp"
+        android:layout_height="48dp"
         android:background="@drawable/ic_launcher_background"
         android:text="Cadastrar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.481"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.702" />
@@ -103,7 +103,7 @@
         android:id="@+id/edt_senha"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/telacadastro"
+        android:background="@color/white"
         android:ems="10"
         android:hint="  Senha "
         android:inputType="textPassword"
@@ -119,7 +119,7 @@
         android:id="@+id/edt_nome"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/telacadastro"
+        android:background="@color/white"
         android:ems="10"
         android:hint="  Nome"
         android:inputType="text"
@@ -156,10 +156,10 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
-        android:id="@+id/editTextNumber"
+        android:id="@+id/edt_cpf"
         android:layout_width="212dp"
         android:layout_height="48dp"
-        android:background="@drawable/telacadastro"
+        android:background="@color/white"
         android:ems="10"
         android:hint="  CPF/CNPJ"
         android:inputType="number"
