Comecei a tela de ADD serviços

--- a/src/main/res/layout/activity_tela_freelancer.xml
+++ b/src/main/res/layout/activity_tela_freelancer.xml
@@ -82,7 +82,7 @@
         android:id="@+id/bnt_cadastrarProduto"
         android:layout_width="213dp"
         android:layout_height="49dp"
-        android:text="Cadastrar Produtos"
+        android:text="Cadastrar Serviços"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.489"
@@ -94,7 +94,7 @@
         android:id="@+id/btn_editarProdutos"
         android:layout_width="226dp"
         android:layout_height="wrap_content"
-        android:text="Editar produtos existentes"
+        android:text="Editar serviços existentes"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
